fix(form): input spacings aligned

--- a/packages/styles/scss/components/form/_form.scss
+++ b/packages/styles/scss/components/form/_form.scss
@@ -144,6 +144,6 @@ $input-label-weight: 400 !default;
     z-index: 0;
     // max-height: 3rem;
     // opacity: 1;
-    margin-bottom: $spacing-03;
+    margin-bottom: $spacing-02;
   }
 }
